--- a/dockerfiles/base-images/localbase/with-init/vmlike/Dockerfile
+++ b/dockerfiles/base-images/localbase/with-init/vmlike/Dockerfile
@@ -1,11 +1,22 @@
-FROM initable as vmlike-base
-ARG GITHUB_URL=https://github.com
-ARG GITHUB_PROXY=https://mirror.ghproxy.com
-ARG OH_MY_ZSH_INSTALL_SHELL_URL=https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/
-ARG OH_MY_ZSH_INSTALL_SHELL_FILE_NAME=install.sh
-RUN apt update -y && apt upgrade -y && apt autoclean -y \
-    && apt install -y vim zsh ssh iproute2 \
-    && mkdir -p /root/dev && cd /root/dev \
-    && curl -O $GITHUB_PROXY/$OH_MY_ZSH_INSTALL_SHELL_URL$OH_MY_ZSH_INSTALL_SHELL_FILE_NAME \
-    && sed -i 's|${GITHUB_URL}|${GITHUB_PROXY}/${GITHUB_URL}|g' $OH_MY_ZSH_INSTALL_SHELL_FILE_NAME \
-    && chmod +x $OH_MY_ZSH_INSTALL_SHELL_FILE_NAME
+FROM debian:bullseye as debian-base
+RUN echo "deb https://mirrors.tuna.tsinghua.edu.cn/debian/ bullseye main contrib non-free \
+          deb https://mirrors.tuna.tsinghua.edu.cn/debian/ bullseye-updates main contrib non-free \
+          deb https://mirrors.tuna.tsinghua.edu.cn/debian/ bullseye-backports main contrib non-free \
+          deb https://mirrors.tuna.tsinghua.edu.cn/debian-security bullseye-security main contrib non-free" > /etc/apt/sources.list \
+    && apt update \
+    && apt upgrade -y \
+    && apt install -y curl htop procps git \
+    && apt autoclean -y
+
+
+FROM debian-base as vmlike-base
+ARG SSHD_CONFIG=/etc/ssh/sshd_config
+WORKDIR /root/dev
+RUN apt update \
+    && apt upgrade -y \
+    && apt install -y init zsh vim ssh iproute2 \
+    && apt autoclean -y \
+    && sed -i '/#PermitRootLogin prohibit-password/a PermitRootLogin yes' $SSHD_CONFIG \
+    && systemctl enable sshd \
+    && systemctl start sshd
+ENTRYPOINT ["/sbin/init"]
