fixed errors logout

--- a/dockerfiles/base-images/localbase/with-init/vmlike/Dockerfile
+++ b/dockerfiles/base-images/localbase/with-init/vmlike/Dockerfile
@@ -1,8 +1,8 @@
 FROM debian:bullseye as debian-base
-RUN echo "deb https://mirrors.tuna.tsinghua.edu.cn/debian/ bullseye main contrib non-free \
-          deb https://mirrors.tuna.tsinghua.edu.cn/debian/ bullseye-updates main contrib non-free \
-          deb https://mirrors.tuna.tsinghua.edu.cn/debian/ bullseye-backports main contrib non-free \
-          deb https://mirrors.tuna.tsinghua.edu.cn/debian-security bullseye-security main contrib non-free" > /etc/apt/sources.list \
+RUN echo "deb http://mirrors.tuna.tsinghua.edu.cn/debian/ bullseye main contrib non-free \
+          deb http://mirrors.tuna.tsinghua.edu.cn/debian/ bullseye-updates main contrib non-free \
+          deb http://mirrors.tuna.tsinghua.edu.cn/debian/ bullseye-backports main contrib non-free \
+          deb http://mirrors.tuna.tsinghua.edu.cn/debian-security bullseye-security main contrib non-free" > /etc/apt/sources.list \
     && apt update \
     && apt upgrade -y \
     && apt install -y curl htop procps git \
@@ -16,7 +16,5 @@ RUN apt update \
     && apt upgrade -y \
     && apt install -y init zsh vim ssh iproute2 \
     && apt autoclean -y \
-    && sed -i '/#PermitRootLogin prohibit-password/a PermitRootLogin yes' $SSHD_CONFIG \
-    && systemctl enable sshd \
-    && systemctl start sshd
+    && sed -i '/#PermitRootLogin prohibit-password/a PermitRootLogin yes' $SSHD_CONFIG
 ENTRYPOINT ["/sbin/init"]
